--- a/1.html
+++ b/1.html
@@ -11,6 +11,10 @@
 		<li><a href="3.html">MRI</a></li>
 	</ol>
 	<h2>Meaning of XrayMachine?</h2>
+	<p>
+		<iframe width="560" height="315" src="https://www.youtube.com/embed/jSJM9iOiQ1g" frameborder="0" allowfullscreen>
+		</iframe>
+	</p>
 	<img src="Xraymachine.JPG" width="300" target="Xraymachine">
 	<p style="margin-top:40px;">An X-ray machine is any machine that involves X-rays. It may consist of an X-ray generator and an X-ray detector.
 Examples include:
