--- a/3.html
+++ b/3.html
@@ -15,4 +15,24 @@
 	<p style="margin-top:40px;">A variety of imaging techniques such as X-ray radiography, ultrasound, computed tomography (CT), nuclear medicine including positron emission tomography (PET), and magnetic resonance imaging (MRI) are used to diagnose or treat diseases. Interventional radiology is the performance of usually minimally invasive medical procedures with the guidance of imaging technologies such as those mentioned above.
 	</p>
 </body>
+	<p>
+		<!-- 라이브리 시티 설치 코드 -->
+		<div id="lv-container" data-id="city" data-uid="MTAyMC80OTExOC8yNTYxMw==">
+			<script type="text/javascript">
+		   (function(d, s) {
+		       var j, e = d.getElementsByTagName(s)[0];
+		
+		       if (typeof LivereTower === 'function') { return; }
+		
+		       j = d.createElement(s);
+		       j.src = 'https://cdn-city.livere.com/js/embed.dist.js';
+		       j.async = true;
+		
+		       e.parentNode.insertBefore(j, e);
+		   })(document, 'script');
+			</script>
+		<noscript> 라이브리 댓글 작성을 위해 JavaScript를 활성화 해주세요</noscript>
+		</div>
+		<!-- 시티 설치 코드 끝 -->
+	</p>
 </html>
