--- a/1.html
+++ b/1.html
@@ -11,10 +11,6 @@
 		<li><a href="3.html">MRI</a></li>
 	</ol>
 	<h2>Meaning of XrayMachine?</h2>
-	<p>
-		<iframe width="560" height="315" src="https://www.youtube.com/embed/jSJM9iOiQ1g" frameborder="0" allowfullscreen>
-		</iframe>
-	</p>
 	<img src="Xraymachine.JPG" width="300" target="Xraymachine">
 	<p style="margin-top:40px;">An X-ray machine is any machine that involves X-rays. It may consist of an X-ray generator and an X-ray detector.
 Examples include:
@@ -25,4 +21,24 @@ Detectors in X-ray astronomy
 <br>In 1909, M처nico S찼nchez Moreno inventor of the first portable x-ray machine.
 	</p>
 </body>
+	<p>
+		<!-- 라이브리 시티 설치 코드 -->
+		<div id="lv-container" data-id="city" data-uid="MTAyMC80OTExOC8yNTYxMw==">
+			<script type="text/javascript">
+		   (function(d, s) {
+		       var j, e = d.getElementsByTagName(s)[0];
+		
+		       if (typeof LivereTower === 'function') { return; }
+		
+		       j = d.createElement(s);
+		       j.src = 'https://cdn-city.livere.com/js/embed.dist.js';
+		       j.async = true;
+		
+		       e.parentNode.insertBefore(j, e);
+		   })(document, 'script');
+			</script>
+		<noscript> 라이브리 댓글 작성을 위해 JavaScript를 활성화 해주세요</noscript>
+		</div>
+		<!-- 시티 설치 코드 끝 -->
+	</p>
 </html>
