--- a/1.html
+++ b/1.html
@@ -2,38 +2,33 @@
 <html>
 <head>
 	<title>Xray Machine</title>
-	<style>
-			div{
-			border:10px solid green;
-			font-size:60px;
-			}
-		@media(max-width:500px){
-			div{
-				display:none;
-			}
-			}
-	</style>
-	</head>
+	<link rel="stylesheet" href="style.css">
+</head>
 <body>
 	<h1><a href="index.html">Radiology</a></h1>
-	<ol>
-		<li><font color="Red"><a href="1.html">XrayMachine</a></font></li>
-		<li><a href="2.html">CT</a></li>
-		<li><a href="3.html">MRI</a></li>
-	</ol>
-	<h2>Meaning of XrayMachine?</h2>
-	<p>
-		<iframe width="560" height="315" src="https://www.youtube.com/embed/jSJM9iOiQ1g" frameborder="0" allowfullscreen>
-		</iframe>
-	</p>
-	<img src="Xraymachine.JPG" width="300" target="Xraymachine">
-	<p style="margin-top:40px;">An X-ray machine is any machine that involves X-rays. It may consist of an X-ray generator and an X-ray detector.
-Examples include:
-<br>Machines for medical projectional radiography
-Machines for computed tomography
-Backscatter X-ray machines, used as "body scanners" in airport security
-Detectors in X-ray astronomy
-<br>In 1909, Mónico Sánchez Moreno inventor of the first portable x-ray machine.
-	</p>
+	<div id="grid">
+		<ol>
+			<li><font color="Red"><a href="1.html">XrayMachine</a></font></li>
+			<li><a href="2.html">CT</a></li>
+			<li><a href="3.html">MRI</a></li>
+		</ol>
+		<div>
+			<h2>Meaning of XrayMachine?</h2>
+			<p>
+				<iframe width="560" height="315" src="https://www.youtube.com/embed/jSJM9iOiQ1g" frameborder="0" allowfullscreen>
+				</iframe>
+			</p>
+			<img src="Xraymachine.JPG" width="300" target="Xraymachine">
+			<p style="margin-top:40px;">
+				An X-ray machine is any machine that involves X-rays. It may consist of an X-ray generator and an X-ray detector.
+				Examples include:
+				<br>Machines for medical projectional radiography
+				Machines for computed tomography
+				Backscatter X-ray machines, used as "body scanners" in airport security
+				Detectors in X-ray astronomy
+				<br>In 1909, Mónico Sánchez Moreno inventor of the first portable x-ray machine.
+			</p>
+		</div>
+	</div>
 </body>
 </html>
