--- a/2.html
+++ b/2.html
@@ -2,17 +2,22 @@
 <html>
 <head>
 	<title>CT</title>
-	</head>
+	<link rel="stylesheet" href="style.css">
+</head>
 <body>
 	<h1><a href="index.html">Radiology</a></h1>
-	<ol>
-		<li><a href="1.html">XrayMachine</a></li>
-		<li><font color="Red"><a href="2.html">CT</a></font></li>
-		<li><a href="3.html">MRI</a></li>
-	</ol>
-	<h2>Meaning of CT?</h2>
-	<img src="CT.JPG" width="300" target="CT Image">
-	<p style="margin-top:40px;">A CT scan, or computed tomography scan (formerly computerized axial tomography scan, or CAT scan)[2] is a medical imaging procedure that uses computer-processed combinations of many X-ray measurements taken from different angles to produce cross-sectional (tomographic) images (virtual "slices") of specific areas of a scanned object, allowing the user to see inside the object without cutting. The 1979 Nobel Prize in Physiology or Medicine was awarded jointly to South African American physicist Allan M. Cormack and English electrical engineer Godfrey N. Hounsfield "for the development of computer assisted tomography."
-	</p>
+	<div id="grid">
+		<ol>
+			<li><a href="1.html">XrayMachine</a></li>
+			<li><font color="Red"><a href="2.html">CT</a></font></li>
+			<li><a href="3.html">MRI</a></li>
+		</ol>
+		<div>
+			<h2>Meaning of CT?</h2>
+			<img src="CT.JPG" width="300" target="CT Image">
+			<p style="margin-top:40px;">A CT scan, or computed tomography scan (formerly computerized axial tomography scan, or CAT scan)[2] is a medical imaging procedure that uses computer-processed combinations of many X-ray measurements taken from different angles to produce cross-sectional (tomographic) images (virtual "slices") of specific areas of a scanned object, allowing the user to see inside the object without cutting. The 1979 Nobel Prize in Physiology or Medicine was awarded jointly to South African American physicist Allan M. Cormack and English electrical engineer Godfrey N. Hounsfield "for the development of computer assisted tomography."
+			</p>
+		</div>
+	</div>
 </body>
 </html>
