--- a/1.html
+++ b/1.html
@@ -3,9 +3,14 @@
 <head>
 	<title>Xray Machine</title>
 	<link rel="stylesheet" href="style.css">
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+	<script	src="colors.js"></script>
 </head>
 <body>
 	<h1><a href="index.html">Radiology</a></h1>
+	<input id="night_day" type="button" value="night" onclick="
+			nightDayHandler(this);
+		">
 	<div id="grid">
 		<ol>
 			<li><font color="Red"><a href="1.html">XrayMachine</a></font></li>
